third_party/move/move-compiler-v2/tests/reference-safety/write_ref_dest_err.no-opt.exp

Diagnostics:
error: cannot drop local `_y` which is still borrowed
   ┌─ tests/reference-safety/write_ref_dest_err.move:25:9
   │
24 │         let z = &_y;
   │                 --- local `_y` previously borrowed here
25 │         _y = vector[2];
   │         ^^^^^^^^^^^^^^ dropped here
26 │         *z;
   │         -- conflicting reference `z` used here
